--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.67.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0"
   },
