--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "add-splash": "react-native generate-bootsplash assets/bootsplash_logo_original.png --background-color=F5FCFF --logo-width=100 --assets-path=assets --flavor=main"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
@@ -18,6 +19,7 @@
     "axios": "^0.26.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-bootsplash": "^4.1.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-vector-icons": "^9.1.0",
