--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
-    "@react-native-community/netinfo": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-bootsplash": "^4.1.3",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-vector-icons": "^9.1.0",
