--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mynative",
+  "name": "mealtracker",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
-    "@react-native-community/netinfo": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@reduxjs/toolkit": "^1.7.2",
